welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var x:int=0
      ^Variables:2: error: not found: type int
var y:int=0
      ^